# backend/routes/api.php
@@ -16,10 +16,10 @@ Route::middleware('jwt.auth')->group(function () {
     Route::post('refresh', [AuthController::class, 'refresh']);
 
     // Route untuk admin
-    Route::middleware('role:admin')->group(function () {
-        Route::post('register/dokter', [UserController::class, 'registerDokter']);
+    Route::middleware('role:admin|dokter')->group(function () {
         Route::get('users', [UserController::class, 'getAllUsers']);
         Route::get('users/{id}', [UserController::class, 'show']);
+        Route::put('users/{id}', [UserController::class, 'update']);
         Route::delete('users/{id}', [UserController::class, 'delete']);
         Route::delete('users/{id}/force-delete', [UserController::class, 'forceDelete']);
         Route::post('users/{id}/restore', [UserController::class, 'restore']);
@@ -28,19 +28,19 @@ Route::middleware('jwt.auth')->group(function () {
         Route::patch('/videos/{videoId}', [VideoController::class, 'updateStatusVideo']);
         Route::get('videos', [VideoController::class, 'showAllVideos']); // Lihat semua video
         Route::get('videos/{videoId}', [VideoController::class, 'showById']); // Lihat detail video
+
+        Route::get('videos/stream/{filename}', [VideoController::class, 'streamVideo']);
+
+    });
+
+    // Route untuk admin
+    Route::middleware('role:admin')->group(function () {
+        Route::post('register/dokter', [UserController::class, 'registerDokter']);
     });
 
     // Route untuk dokter
     Route::middleware('role:dokter')->group(function () {
         Route::post('register/pasien', [UserController::class, 'registerPasien']);
-        Route::get('users', [UserController::class, 'getAllUsers']);
-        Route::put('users/{id}', [UserController::class, 'update']);
-        Route::get('users/{id}', [UserController::class, 'show']);
-
-        Route::post('videos/{videoId}/assign/{userId}', [VideoController::class, 'assignToUser']); // Assign video ke user
-        Route::patch('/videos/{videoId}', [VideoController::class, 'updateStatusVideo']);
-        Route::get('videos', [VideoController::class, 'showAllVideos']); // Lihat semua video
-        Route::get('videos/{videoId}', [VideoController::class, 'showById']); // Lihat detail video
     });
 
     // Route untuk pasien
